# rust-database

./: .gitignore  Cargo.toml  README.md  knowledge.md
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/btree/: mod.rs
backend/src/command/: command.rs
backend/src/database_handler/: database_handler.rs  mod.rs
backend/src/protocol/: connection.rs  error.rs  frame.rs  mod.rs
backend/src/server/: mod.rs  parser.rs
backend/src/storage/: mod.rs  operations.rs  page.rs  transaction.rs  value.rs
backend/src/tests/: buffer_pool_tests.rs  database_tests.rs  mod.rs  protocol_tests.rs  server_tests.rs  wal_tests.rs
database/: Cargo.toml
database-client/: Cargo.toml
database-client/src/: main.rs
database/src/: lib.rs  main.rs
database/src/btree/: mod.rs  tests.rs
database/src/protocol/: connection.rs  response.rs
database/src/server/: mod.rs  parser.rs
database/src/storage/: buffer_pool.rs  value.rs
database/src/tests/: client_tests.rs  database_tests.rs  mod.rs  server_tests.rs  value_tests.rs
src/: lib.rs  main.rs  tests.rs
src/index/: mod.rs  tests.rs
src/protocol/: connection.rs  mod.rs  tests.rs
src/query/: mod.rs  optimizer.rs  parser.rs
src/server/: lib.rs  mod.rs  parser.rs  tests.rs
src/storage/: buffer_pool.rs  disk_manager.rs  error.rs  mod.rs  operations.rs  slotted_page.rs  tests.rs  transaction.rs  value.rs  wal.rs
