[package]
name = "database"
version = "0.1.0"
edition = "2021"
default-run = "database"
autotests = true

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.11.5"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
crc32fast = "1.4.2"
threadpool = "1.8.1"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dev-dependencies]
tempfile = "3.8"
